--- a/FinPlan.Web/Components/ExportButton.razor
+++ b/FinPlan.Web/Components/ExportButton.razor
@@ -1,8 +1,11 @@
 @inject IExcelExportService ExcelService
 @inject IJSRuntime JSRuntime
 @using FinPlan.Shared
-@using FinPlan.Web.Services
+@using FinPlan.Shared.Models
 @using FinPlan.Web.Models
+@using FinPlan.Web.Services
+
+@using FinPlan.Web.Services
 
 <button @onclick="ExportToExcel" class="@CssClass">
     <i class="bi bi-file-excel"></i> @Text
