--- a/FinPlan.Web/Components/Pages/Home.razor
+++ b/FinPlan.Web/Components/Pages/Home.razor
@@ -22,7 +22,7 @@
                             <i class="bi bi-calculator display-4 text-primary mb-3"></i>
                             <h5 class="card-title">Wealth Journey</h5>
                             <p class="card-text">Calculate how your savings will grow with compound interest and regular contributions.</p>
-                            <a href="/savings-planner" class="btn btn-primary">Try Planner</a>
+                            <a href="/wealth-journey" class="btn btn-primary">Try Planner</a>
                         </div>
                     </div>
                 </div>
