--- a/FinPlan.Web/Components/App.razor
+++ b/FinPlan.Web/Components/App.razor
@@ -19,6 +19,7 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="@Assets["lib/bootstrap/dist/js/bootstrap.bundle.min.js"]"></script>
     <script src="js/excelExport.js"></script>
+    <script src="js/cookieHandlerExtension.js"></script>
 </body>
 
 </html>
