--- a/FinPlan.Web/Components/App.razor
+++ b/FinPlan.Web/Components/App.razor
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["FinPlan.Web.styles.css"]" />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <title>WealthyFyX</title>
+    <link rel="icon" type="image/svg+xml" href="images/wealthyfyx-logo.svg" />
     <HeadOutlet />
 </head>
 
