--- a/FinPlan.Web/Components/Pages/SavingsPlanner.razor
+++ b/FinPlan.Web/Components/Pages/SavingsPlanner.razor
@@ -17,7 +17,7 @@
 @rendermode InteractiveServer
 @implements IDisposable
 
-<PageTitle>Retirement Savings Planner</PageTitle>
+<PageTitle>WealthyFyX - Retirement Savings Planner</PageTitle>
 
 <style>
     /* Dark theme styles */
